[package]
name = "topfew"
version = "0.2.3"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
license = "GPL-3.0"
repository = "https://github.com/djc/topfew-rs"
description = "CLI to find high frequency occurrences in structured text files"
keywords = ["cli"]
categories = ["command-line-utilities", "text-processing"]
edition = "2018"

[dependencies]
ahash = "0.7.0"
anyhow = "1"
num_cpus = "1.13"
regex = "1"
rayon = "1.3"
smartstring = "0.2.5"
structopt = "0.3"

[dev-dependencies]
quickcheck = "1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
