[package]
name = "topfew"
version = "0.2.4"
license = "GPL-3.0"
repository = "https://github.com/djc/topfew-rs"
description = "CLI to find high frequency occurrences in structured text files"
keywords = ["cli"]
categories = ["command-line-utilities", "text-processing"]
edition = "2018"

[dependencies]
ahash = "0.8.0"
anyhow = "1"
num_cpus = "1.13"
regex = "1"
rayon = "1.3"
smartstring = "1"
clap = { version = "4.0.2", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
