[package]
name = "topfew"
version = "0.2.4"
license = "GPL-3.0"
repository = "https://github.com/djc/topfew-rs"
description = "CLI to find high frequency occurrences in structured text files"
keywords = ["cli"]
categories = ["command-line-utilities", "text-processing"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.0.2", features = ["derive"] }
rayon = "1.3"
regex = "1"
rustc-hash = "2.0"
smartstring = "1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
quickcheck = "1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
lto = "fat"
